vlib/v/checker/tests/unsafe_fixed_array_assign.vv
struct Box {
mut:
	num int
}

mut box := Box { num: 10 }
a := [&box]!
mut b := a
b[0].num = 0
println(a)
